<resources>
    <string name="app_name">Volume</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SetVolume">Set Volume</string>
    <string name="GetImages">Get Images</string>
    <string name="AppTitle">PhoneFinder</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="My_Phone_Number">Phone Number</string>
    <string name="Password">Password</string>
    <string name="Lost_Password">Password Of Lost Phone</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Find_Phone">Lost Phone No.</string>
    <string name="Get_Controls">Get Controls</string>
    <string name="Change_Discoverability">Change Discoverability</string>
    <string name="Not_Discoverable">Not Discoverable</string>
    <string name="Discoverable">Discoverable</string>
    <string name="Permission">Give Do Not Disturb Permission</string>
    <string name="Increase_Volume">Increase Volume</string>
    <string name="Decrease_Volume">Decrease Volume</string>
    <string name="Insult_User">yOu LOsT iT??? </string>
    <string name="App_Name">PhoneFinder(BETA)</string>
</resources>